--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-python-telegram-bot==12.0.0b1
+python-telegram-bot==20.3
 pySmartDL
 PyDrive
+wget
 requests
+pymongo
+dnspython
+pyopenload
 urllib3
-requests
 URLObject>=2.1.1
-pycrypto>=2.6
-httplib2==0.15.0
-
+pycryptodome>=3.6
